[Enc] Get memory info in Enclave
Summary: Some Enclave SDKs (e.g. OpenEnclave and TEE) environment don't support all POSIX interfaces defiend in unistd.h.
Current known unsupported functions are:
1.sysconf(_SC_PHYS_PAGES()) returns -1.
2.sysconf(_SC_PAGESSIZE()) returns -1.
3.sysconf(_SC_PAGE_SISE()) returns -1.

We support getting these data from other native mehtods.

Test Plan: all tests pass

Reviewers: lei.yul, jeffery.wsj, sanhong.lsh

Issue: https://aone.alibaba-inc.com/task/41773325

CR:
https://code.aone.alibaba-inc.com/java-tee/JavaEnclave/codereview/8806784